--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "mongodb": "^6.9.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "axios": "^1.7.8",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.3.0",
+    "flowbite": "^2.5.2",
+    "jose": "^5.9.6",
+    "mongodb": "^3.7.4",
     "next": "^14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-usestateref": "^1.0.9",
+    "tinymce": "^7.5.1"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
