--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI= mongodb+srv://lp3iuser:HmRJVQBcqOY2oZoS@cluster0.oe59k.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_NAME= applp3i
+MONGODB_URI= mongodb+srv://wanda:wandak22@cluster0.uxyky1c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_NAME= portofolio_wanda
 AUTH_COOKIE_NAME=myapptoken
+
